--- a/APPLI/PARTS_LIST/LISTS/HTML/TABLE.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/TABLE.HTML
@@ -1,33 +1,31 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
 
-
 <table class="table" style="font-size:12px;">
     <thead>
         <tr>
-            <th>#</th>
             <th>NO</th>
             <th>PARTS CATEGORY</th>
             <th>PARTS NAME</th>
             <th>PRICE</th>
+            <th></th>
+            <th></th>
             <th></th>
         </tr>
     </thead>
     <tbody>
         <!--パーツ新規追加-->
         <tr>
-            <!--順-->
-            <td>--</td>
             <!--ID-->
             <td>
-                <span class="label label-default">NEW</span>
+                <span class="label label-info">NEW</span>
             </td>
             <!--カテゴリ-->
             <td>
                 <div class="form-group">
                     <div class="btn-group">
                         <div class="btn-group">
-                            <button type="button" class="btn btn-info dropdown-toggle input-sm" id="new_parts_categogy" data-toggle="dropdown" aria-expended="false">
+                            <button type="button" class="btn btn-info dropdown-toggle btn-xs hgt29" id="new_parts_categogy" data-toggle="dropdown" aria-expended="false">
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu" name="NEW">
@@ -52,7 +50,7 @@
             </td>
             <!--ボタン-->
             <td>
-                <a href="" class="btn btn-primary btn-sm" onclick="newParts(); return false;">NEW</a>
+                <a href="" class="btn btn-primary btn-xs hgt29" onclick="newParts(); return false;">NEW</a>
             </td>
        </tr>
        <!--登録済パーツの表示-->
