--- a/APPLI/SET_CATEGORY/LISTS/HTML/TABLE.HTML
+++ b/APPLI/SET_CATEGORY/LISTS/HTML/TABLE.HTML
@@ -1,4 +1,4 @@
-<table class="table">
+<table class="table" style="font-size:12px;">
     <thead>
         <tr>
             <th>CATEGORY NO</th>
@@ -11,24 +11,24 @@
     <tbody>
         <tr>
             <td>
-                <span class="label label-default">NEW</span>
+                <span class="label label-info">NEW</span>
             </td>
             <td>
                 <input type="text" 
                         id="SET_CATEGORY_NM_EN_NEW" 
                         name="SET_CATEGORY_NM_EN_NEW" value="" 
-                        class="form-control" 
+                        class="form-control input-sm" 
                         placeholder="セットカテゴリ名(英語)" >
             </td>
             <td>
                 <input type="text" 
                         id="SET_CATEGORY_NM_JP_NEW" 
                         name="SET_CATEGORY_NM_JP_NEW" value="" 
-                        class="form-control" 
+                        class="form-control input-sm" 
                         placeholder="セットカテゴリ名(日本語)" />
             </td>
             <td>
-                <a class="btn btn-primary" onclick="newSetCategory(); return false;">NEW</a>
+                <a class="btn btn-primary btn-xs hgt29" onclick="newSetCategory(); return false;">NEW</a>
             </td>
         </tr>
         ###TABLE_RECORDS###
