--- a/APPLI/OPERATION_DETAIL/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/OPERATION_DETAIL/LISTS/HTML/RECORDS.HTML
@@ -1,5 +1,4 @@
 <!--DETAIL LISTS Records-->
-<!--<html>-->
 <!--RECORDS-->
 <tr id="edit-row-%1">
     <td>%1</td>
@@ -23,11 +22,11 @@
     </td>
     <td>
         <!--更新ボタン-->
-        <a class="btn btn-warning btn-sm" id="DETAIL_EDIT_%1" onclick="editDetail(%1); return false;" >EDIT</a>
+        <a class="btn btn-warning btn-xs hgt29" id="DETAIL_EDIT_%1" onclick="editDetail(%1); return false;" >EDIT</a>
+    </td>
+    <td>
         <!--削除ボタン-->
-        <a class="btn btn-danger btn-sm" id="DETAIL_DELETE_%1" onclick="deleteDetail(%1); return false;" >DEL</a>
+        <a class="btn btn-danger btn-xs hgt29" id="DETAIL_DELETE_%1" onclick="deleteDetail(%1); return false;" >DEL</a>
     </td>
 </tr>
 <!--RECORDS-->
-
-<!--</html>-->
