--- a/APPLI/OPERATION_LIST/LISTS/HTML/SHOW.HTML
+++ b/APPLI/OPERATION_LIST/LISTS/HTML/SHOW.HTML
@@ -1,22 +1,21 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
+<div id="whole" class="container opa0 fade-in tbl-x-scroll-min768"> 
 
-<div id="whole" class="container fade-in" style="opacity:0">
-     
     <!--Header Info-->
-    <div class="col-md-1 col-xs-1" >
+    <div class="col-sm-1 col-xs-1" >
         <i class="glyphicon glyphicon-info-sign"></i>
     </div>
  
     <!--Header Info-->
-    <div class="col-md10 lbl-header-info">
+    <div class="col-sm-10 lbl-header-info">
         <span id="info-msg" class="label label-lg label-###INFO_LV###">
             ###INFO_MSG###
         </span>
     </div>
     <!--ERROR MESSAGE-->
     <div class="row">
-        <div class="col-md-10 lbl-header-info">
+        <div class="col-sm-10 lbl-header-info">
             <div>
                 <span id="CATEGORY_NM_ISNULL_MSG" class="fade-in label label-danger ###CATEGORY_NM_ISNULL###">カテゴリ名が、選択されていません。</span>
             </div>
@@ -38,47 +37,46 @@
 
     <!--カテゴリ検索-->
     <div class="row">
-        <form name="search" action="/APP/OPERATION_LIST/LISTS" method="GET">    
-            <div class="form-group">
-                <div class="btn-group">
-                    <!--Operation Category Dropdown list-->
+        <div class="col-md-8">
+            <form name="search" action="/APP/OPERATION_LIST/LISTS" method="GET">    
+                <div class="form-group">
                     <div class="btn-group">
-                        <button type="submit" class="btn btn-info dropdown-toggle" data-toggle="dropdown" id="operation_category" aria-expended="false">
-                            &nbsp<span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu" name="PAGE">
-                           <li name="CATEGORY_PAGE">
-                               <a class="category-list" id="cat_list_0" >ALL</a>
-                           </li>
-                           ###CATEGORY###
-                        </ul>
+                        <!--Operation Category Dropdown list-->
+                        <div class="btn-group">
+                            <button type="submit" class="btn btn-info dropdown-toggle btn-xs hgt29" data-toggle="dropdown" id="operation_category" aria-expended="false">
+                                &nbsp<span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu" name="PAGE">
+                               <li name="CATEGORY_PAGE">
+                                   <a class="category-list" id="cat_list_0" >ALL</a>
+                               </li>
+                               ###CATEGORY###
+                            </ul>
+                        </div>
+                        <div class="btn-group">
+                            <input type="text" name="CATEGORY_NM_PAGE" id="CATEGORY_NM_PAGE" value="###CATEGORY_NM_PAGE###" class="form-control input-sm" disabled />
+                        </div>
+                        <!--Search Submit button-->
+                        <div class="btn-group">
+                            <button id="Search" type="submit" class="btn btn-info btn-xs hgt29" />
+                                <span class="glyphicon glyphicon-eye-open"></span>
+                            </button>
+                        </div>
                     </div>
-                    <div class="btn-group">
-                        <input type="text" name="CATEGORY_NM_PAGE" id="CATEGORY_NM_PAGE" value="###CATEGORY_NM_PAGE###" class="form-control" disabled />
-                    </div>
-                    <!--Search Submit button-->
-                    <div class="btn-group">
-                        <button id="Search" type="submit" class="btn btn-info" />
-                            <span class="glyphicon glyphicon-eye-open"></span>
-                        </button>
-                    </div>
+                    <!--カテゴリ検索値、表示ページ、検索有無-->
+                    <input type="hidden" id="action" name="action" value="SHOW" />
+                    <input type="hidden" id="page" name="page" value="###PAGE###" />
+                    <input type="hidden" id="search" name="search" value="0" />
+                    <input type="hidden" name="category-nm" id="CATEGORY_NM_HID_PAGE" value="###CATEGORY_NM_PAGE###" />
+                    <input type="hidden" name="category-no" id="CATEGORY_NO_HID_PAGE" value="###CATEGORY_NO_PAGE###" />
                 </div>
-                <!--カテゴリ検索値、表示ページ、検索有無-->
-                <input type="hidden" id="action" name="action" value="SHOW" />
-                <input type="hidden" id="page" name="page" value="###PAGE###" />
-                <input type="hidden" id="search" name="search" value="0" />
-                <input type="hidden" name="category-nm" id="CATEGORY_NM_HID_PAGE" value="###CATEGORY_NM_PAGE###" />
-                <input type="hidden" name="category-no" id="CATEGORY_NO_HID_PAGE" value="###CATEGORY_NO_PAGE###" />
-            </div>
-
-            <!--Spacer-->
-            <div class="col-sm-1 hidden-xs"></div>
-        </form>
+        
+                <!--Spacer-->
+                <div class="col-sm-1 hidden-xs"></div>
+            </form>
+        </div>    
     </div>
 
-    <!--Spacer
-    <div class="header-dummy" style="height:9.0em; background-color:piink;"></div>
-    -->
 
     <!--Contents Records/Pagination-->
     <div class="header-under-contents">
@@ -91,6 +89,7 @@
             <input type="hidden" id="CATEGORY_NM" name="CATEGORY_NM" value="###CATEGORY_NM_PAGE###" />
             <input type="hidden" id="CATEGORY_NO" name="CATEGORY_NO" value="###CATEGORY_NO_PAGE###" />
             -->
+
             <div class="contents-table">
                 ###TABLE###
             </div>
@@ -98,6 +97,8 @@
         <div id="pager" class="pagination-foot">
             ###PAGER###
         </div>
+        <!--Spacer-->
+        <div class="header-dummy" style="height:10.0em; background-color:piink;"></div>
     </div>
 </div>
 
