--- a/APPLI/PARTS_CATEGORY/LISTS/HTML/TABLE.HTML
+++ b/APPLI/PARTS_CATEGORY/LISTS/HTML/TABLE.HTML
@@ -1,7 +1,6 @@
-<table class="table">
+<table class="table" style="font-size:12px;">
     <thead>
         <tr>
-            <th>#</th>
             <th>CATEGORY NO</th>
             <th>CATEGORY NAME(EN)</th>
             <th>CATEGORY NAME(JP)</th>
@@ -11,26 +10,25 @@
     </thead>
     <tbody>
        <tr>
-            <td>-</td>
             <td>
-                <span class="label label-default">NEW</span>
+                <span class="label label-info">NEW</span>
             </td>
             <td>
                 <input type="text" 
                         id="PARTS_CATEGORY_NM_EN_NEW" 
                         name="PARTS_CATEGORY_NM_EN_NEW" value="" 
-                        class="form-control"
+                        class="form-control input-sm"
                         placeholder="部品カテゴリ名(英語)" >
             </td>
             <td>
                 <input type="text" 
                         id="PARTS_CATEGORY_NM_JP_NEW" 
                         name="PARTS_CATEGORY_NM_JP_NEW" value="" 
-                        class="form-control" 
+                        class="form-control input-sm" 
                         placeholder="部品カテゴリ名(日本語)" />
             </td>
             <td>
-                <a class="btn btn-primary" onclick="newPartsCategory(); return false;">NEW</a>
+                <a class="btn btn-primary btn-xs hgt29" onclick="newPartsCategory(); return false;">NEW</a>
             </td>
         </tr>
         ###TABLE_RECORDS###
