--- a/APPLI/PARTS_DETAIL/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/PARTS_DETAIL/LISTS/HTML/RECORDS.HTML
@@ -2,30 +2,33 @@
 <!--<html>-->
 <!--RECORDS-->
 <tr id="edit-row-%1">
+    <!--ID-->
     <td>%1</td>
+    <!--名称-->
     <td>
         <!--Name-->
         <input type="text" 
                 name="DETAIL_NAME_%1" 
                 id="DETAIL_NAME_%1" 
                 value="%2" 
-                class="form-control input-sm" 
-        />
+                class="form-control input-sm" />
     </td>
+    <!--値-->
     <td>
         <!--Value-->
         <input type="text" 
                 name="DETAIL_VALUE_%1" 
                 id="DETAIL_VALUE_%1" 
                 value="%3" 
-                class="form-control input-sm" 
-        />
+                class="form-control input-sm" />
     </td>
     <td>
         <!--更新ボタン-->
-        <a class="btn btn-warning btn-sm" id="DETAIL_EDIT_%1" onclick="editDetail(%1); return false;" >EDIT</a>
+        <a class="btn btn-warning btn-xs hgt29" id="DETAIL_EDIT_%1" onclick="editDetail(%1); return false;" >EDIT</a>
+    </td>
+    <td>
         <!--削除ボタン-->
-        <a class="btn btn-danger btn-sm" id="DETAIL_DELETE_%1" onclick="deleteDetail(%1); return false;" >DEL</a>
+        <a class="btn btn-danger btn-xs hgt29" id="DETAIL_DELETE_%1" onclick="deleteDetail(%1); return false;" >DELETE</a>
     </td>
 </tr>
 <!--RECORDS-->
