--- a/APPLI/PARTS_DETAIL/LISTS/HTML/TABLE.HTML
+++ b/APPLI/PARTS_DETAIL/LISTS/HTML/TABLE.HTML
@@ -8,6 +8,7 @@
             <th>Name</th>
             <th>Value</th>
             <th></th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -16,7 +17,7 @@
         <tr>
             <!--PK-->
             <td>
-                New
+                <span class="label label-info">NEW</span>
             </td>
             <!--Name-->
             <td>
@@ -28,7 +29,7 @@
             </td>
             <!--ボタン-->
             <td>
-                <a class="btn btn-primary btn-sm" onclick="newDetail(); return false;">NEW</a>
+                <a class="btn btn-primary btn-xs hgt29" onclick="newDetail(); return false;">NEW</a>
             </td>
        </tr>
 
