--- a/APPLI/SET_CATEGORY/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/SET_CATEGORY/LISTS/HTML/RECORDS.HTML
@@ -2,28 +2,32 @@
 
 <!--RECORDS-->
     <tr id="edit-row-%2">
+        <!--ID-->
         <td>
-            <span class="label label-default">%2</span>
+            <span class="label label-info">%2</span>
         </td>
+        <!--カテゴリEN-->
         <td>
             <input type="text" 
                     name="SET_CATEGORY_NM_EN_%2" 
                     id="SET_CATEGORY_NM_EN_%2" value="%3" 
-                    class="form-control" 
+                    class="form-control input-sm" 
                     placeholder="セットカテゴリ名(英語)" />
         </td>
+        <!--カテゴリJP-->
         <td>
             <input type="text" 
                     name="SET_CATEGORY_NM_JP_%2" 
                     id="SET_CATEGORY_NM_JP_%2" value="%4" 
-                    class="form-control" 
+                    class="form-control input-sm" 
                     placeholder="セットカテゴリ名(日本語)" />
         </td>
+
         <td>
-            <a class="btn btn-warning" id="SET_CATEGORY_EDIT_%2" onclick="editSetCategory(%2); return false;" >EDIT</a>
+            <a class="btn btn-warning btn-xs hgt29" id="SET_CATEGORY_EDIT_%2" onclick="editSetCategory(%2); return false;" >EDIT</a>
         </td>
         <td>
-            <a class="btn btn-danger" id="SET_CATEGORY_DELETE_%2" onclick="deleteSetCategory(%2);" >DELETE</a>
+            <a class="btn btn-danger btn-xs hgt29" id="SET_CATEGORY_DELETE_%2" onclick="deleteSetCategory(%2);" >DELETE</a>
         </td>
     </tr>
 <!--RECORDS-->
