--- a/APPLI/SET_CATEGORY/LISTS/HTML/SHOW.HTML
+++ b/APPLI/SET_CATEGORY/LISTS/HTML/SHOW.HTML
@@ -1,6 +1,6 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
-<div id="whole" class="container fade-in" style="opacity:0">
+<div id="whole" class="container opa0 fade-in tbl-x-scroll-min768"> 
     
     <!--Header Info-->
     <div class="col-md-1 col-xs-1" >
