--- a/APPLI/SET_LIST/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/SET_LIST/LISTS/HTML/RECORDS.HTML
@@ -1,11 +1,10 @@
 <!--SET LISTS Records-->
-<!--<html>-->
 
 <!--RECORDS-->
 <tr id="edit-row-%2">
     <!--ID-->
     <td>
-        <span class="label label-default">%2</span>
+        <span class="label label-info">%2</span>
     </td>
     <!--カテゴリ-->
     <td>
@@ -13,7 +12,7 @@
             <div class="form-group">
                 <div class="btn-group">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-info dropdown-toggle input-sm" data-toggle="dropdown" id="category" aria-expended="false">
+                        <button type="button" class="btn btn-info dropdown-toggle btn-xs hgt29" data-toggle="dropdown" id="category" aria-expended="false">
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu" name="%2">
@@ -38,14 +37,18 @@
     <td>
         <input type="number" name="SET_PRICE_%2" id="SET_PRICE_%2" value="%6" class="form-control input-sm" />
     </td>
-    <!--詳細ボタン-->
+    <!--ボタン-->
     <td>
         <!--詳細ボタン-->
-        <a class="btn btn-success btn-sm" id="SET_DETAIL_%2" onclick="goToDetail(%2); return false;" >DETAIL</a>
+        <a class="btn btn-success btn-xs hgt29" id="SET_DETAIL_%2" onclick="goToDetail(%2); return false;" >DETAIL</a>
+    </td>
+    <td>
         <!--更新ボタン-->
-        <a class="btn btn-warning btn-sm" id="SET_EDIT_%2" onclick="editSet(%2); return false;" >EDIT</a>
+        <a class="btn btn-warning btn-xs hgt29" id="SET_EDIT_%2" onclick="editSet(%2); return false;" >EDIT</a>
+    </td>
+    <td>
         <!--削除ボタン-->
-        <a class="btn btn-danger btn-sm" id="SET_DELETE_%2" onclick="deleteSet(%2); return false;" >DEL</a>
+        <a class="btn btn-danger btn-xs hgt29" id="SET_DELETE_%2" onclick="deleteSet(%2); return false;" >DEL</a>
     </td>
 </tr>
 <!--RECORDS-->
