--- a/APPLI/SET_LIST/LISTS/HTML/TABLE.HTML
+++ b/APPLI/SET_LIST/LISTS/HTML/TABLE.HTML
@@ -10,6 +10,7 @@
             <th>SET NAME</th>
             <th>PRICE</th>
             <th></th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -17,14 +18,14 @@
         <tr>
             <!--ID-->
             <td>
-                <span class="label label-default">NEW</span>
+                <span class="label label-info">NEW</span>
             </td>
             <!--カテゴリ-->
             <td>
                 <div class="form-group">
                     <div class="btn-group">
                         <div class="btn-group">
-                            <button type="button" class="btn btn-info dropdown-toggle input-sm" id="new_set_categogy" data-toggle="dropdown" aria-expended="false">
+                            <button type="button" class="btn btn-info dropdown-toggle btn-xs hgt29" id="new_set_categogy" data-toggle="dropdown" aria-expended="false">
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu" name="NEW">
@@ -49,7 +50,7 @@
             </td>
             <!--ボタン-->
             <td>
-                <a href="" class="btn btn-primary btn-sm" onclick="newSet(); return false;">NEW</a>
+                <a href="" class="btn btn-primary btn-xs hgt29" onclick="newSet(); return false;">NEW</a>
             </td>
        </tr>
        <!--登録済セットの表示-->
