--- a/HTML/NAVBAR.HTML
+++ b/HTML/NAVBAR.HTML
@@ -2,11 +2,11 @@
         <!--navbar-->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="navbar-header">
-                <a id="showLeft" class="navbar-brand" href="#" style="width:100px;">
+                <a id="showLeft" class="navbar-brand">
                 </a>
             </div>
 
-            <ul class="nav navbar-nav navbar-right" style="margin-right:0px;">
+            <ul class="nav navbar-nav navbar-right">
                 <li class="">
                     <a id="showLeft2" href="#">
                         <i class="glyphicon glyphicon-menu-hamburger"></i>
