--- a/HTML/SIDE.HTML
+++ b/HTML/SIDE.HTML
@@ -1,8 +1,8 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
     <!--LEFT SIDE MENU-->
-    <div class="">
-        <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left " id="cbp-spmenu-s1" style="margin-top:10px;">
+    <div class="side-menu">
+        <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left " id="cbp-spmenu-s1">
 
             <div class="scrollable-menu">
                 <h3>Menu</h3>
@@ -16,24 +16,22 @@
                 </a>
 
                 <div class="dropdown" style="" >
-                    <a href="" class="dropdown-toggle" data-toggle="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown">
                         <i class="glyphicon glyphicon-user"> スタッフ&nbsp</i><span class="caret"></span>
-                        <span style="font-color:blue;"></span>
                     </a>
                     <ul class="dropdown-menu">
-    			       <a href="/APP/STUFF/NEW?action=INPUT">
-                           <i class="glyphicon glyphicon-edit"> 新規登録</i>
-                       </a>
-    			       <a href="/APP/STUFF/USERS?action=SHOW">
-                           <i class="glyphicon glyphicon-edit"> 一覧</i>
-                       </a>
+    			              <a href="/APP/STUFF/NEW?action=INPUT">
+                            <i class="glyphicon glyphicon-edit"> 新規登録</i>
+                        </a>
+                        <a href="/APP/STUFF/USERS?action=SHOW">
+                            <i class="glyphicon glyphicon-edit"> 一覧</i>
+                        </a>
                     </ul>
                 </div>
 
                 <div class="dropdown" style="" >
                     <a href="" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="glyphicon glyphicon-user"> 査定&nbsp</i><span class="caret"></span>
-                        <span style="font-color:blue;"></span>
                     </a>
                     <ul class="dropdown-menu">
     			              <a href="/APP/APPRAISAL/NEW/CUSTOMER?aciotn=INPUT">
@@ -60,7 +58,6 @@
                 <div class="dropdown" style="" >
                     <a href="" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="glyphicon glyphicon-book"> 顧客&nbsp</i><span class="caret"></span>
-                        <span style="font-color:blue;"></span>
                     </a>
                     <ul class="dropdown-menu">
                         <a href="/APP/CUSTOMER/NEW/BASIC?action=INPUT">
@@ -101,11 +98,11 @@
                         <a href="/APP/SET_CATEGORY/LISTS?action=SHOW">
                             <i class="glyphicon glyphicon-wrench"> セットカテゴリ</i>
                         </a>
-                        <a href="/APP/SET_LIST/NEW/SET?action=INPUT">
-                            <i class="glyphicon glyphicon-wrench"> セット新規登録</i>
-                        </a>
                         <a href="/APP/SET_LIST/LISTS?action=SHOW">
                             <i class="glyphicon glyphicon-wrench"> セット一覧</i>
+                        </a>
+                        <a href="">
+                            <i class="glyphicon "></i>
                         </a>
                     </ul>
                 </div>
