--- a/APPLI/SET_DETAIL/LISTS/HTML/TABLE.HTML
+++ b/APPLI/SET_DETAIL/LISTS/HTML/TABLE.HTML
@@ -1,42 +1,135 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
 
-<table class="table" style="font-size:12px;">
-    <thead>
-        <tr>
-            <th>PK</th>
-            <th>Name</th>
-            <th>Value</th>
-            <th></th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
 
-        <!--セット新規追加-->
-        <tr>
-            <!--PK-->
-            <td>
-                <span class="label label-info">NEW</span>
-            </td>
-            <!--Name-->
-            <td>
-                <input type="text" id="DETAIL_NAME_NEW" name="DETAIL_NAME_NEW" value="" class="form-control input-sm" style="" placeholder="名称" >
-            </td>
-            <!--Value-->
-            <td>
-                <input type="text" id="DETAIL_VALUE_NEW" name="DETAIL_VALUE_NEW" value="" class="form-control input-sm" style="" placeholder="値" >
-            </td>
-            <!--ボタン-->
-            <td>
-                <a class="btn btn-primary btn-xs hgt29" onclick="newDetail(); return false;">NEW</a>
-            </td>
-       </tr>
+<!--作業-->
+<div class="row">
+    <div class="col-lg-12"> 
+        <table class="table table-condensed tbl-x-scroll-min768">
+            <thead>
+                <tr>
+                    <th class="col-xs-2 1col-sm-2">Category</th>
+                    <th class="col-xs-2 1col-sm-2">Operation</th>
+                    <th class="col-xs-2 1col-sm-2">Price</th>
+                    <th class="col-xs-1 1col-sm-2">Qty</th>
+                    <th class="col-xs-2 1col-sm-2">Sum</th>
+                    <th class="col-xs-2 1col-sm-2">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+  
+            <!--新規作業パーツの表示-->
+            <div class="row">
+            <tr id="row-new">
+                
 
-       <!--セット詳細情報の表示-->
-       ###TABLE_RECORDS###
+                <!--Category-->
+                <td>
+                    <div class="form-group">
+                        <div class="dropdown">
+                            <div class="btn-group">
+                                <div class="btn-group">
+                                    <button type="button" 
+                                        class="btn btn-info dropdown-toggle btn-xs hgt29" 
+                                        id="new_set_categogy" data-toggle="dropdown" aria-expended="false" 
+                                    />
+                                        <b class="caret text-info" ></b>
+                                    </button>
+                                    <ul class="dropdown-menu input-sm " role="menu" name="NEW">
+                                        ###OPERATION_CATEGORY###
+                                    </ul>
+                                </div>
+                                <div class="btn-group">
+                                    <input type="text" name="CATEGORY_NM_NEW" id="CATEGORY_NM_NEW" value="" 
+                                        class="form-control input-sm input-text" 
+                                        disabled 
+                                        placeholder="作業カテゴリ"
+                                    />
+                                </div>
+                                <input type="hidden" name="CATEGORY_NM_HID_NEW" id="CATEGORY_NM_HID_NEW" value="" 
+                                      class="form-control" />
+                                <input type="hidden" name="CATEGORY_NO_HID_NEW" id="CATEGORY_NO_HID_NEW" value="" 
+                                      class="form-control" />
+                            </div> <!--btn-group-->
+                        </div> <!--.dropdown-->
+                    </div> <!--form-group-->
+                </td>
 
-   </tbody>
-</table>
+                <!--作業-->
+                <td>
+                    <div class="form-group">
+                        <div class="dropdown">
+                            <div class="btn-group">
+                                <div class="btn-group">
+                                    <button type="button" 
+                                        class="btn btn-info dropdown-toggle btn-xs hgt29" 
+                                        id="new_set_categogy" data-toggle="dropdown" aria-expended="false" 
+                                    />
+                                        <b class="caret text-info" ></b>
+                                    </button>
+                                    <ul class="dropdown-menu" role="menu" name="NEW">
+                                        ###OPERATION_LIST###
+                                    </ul>
+                                </div>
+                                <div class="btn-group">
+                                    <input type="text" name="OPERATION_NM_NEW" id="OPERATION_NM_NEW" value="" 
+                                        class="form-control input-sm input-text" 
+                                        disabled 
+                                        placeholder="作業"
+                                    />
+                                </div>
+                                <input type="hidden" name="OPERATION_HID_NO_NEW" id="OPERATION_NO_HID_NEW" value="" class="form-control" />
+                            </div> <!--btn-group-->
+                        </div> <!--.dropdown-->
+                    </div> <!--form-group-->
+                </td>
 
+                <!--PRICE-->
+                <td>
+                    <input type="text" id="PARTS_PRICE_NEW" name="PARTS_PRICE_NEW" value="" 
+                            class="form-control input-sm input-text" 
+                            placeholder="税抜価格" disabled >
+                </td>
+
+                <!--QTY-->
+                <td>
+                        <div class="btn-group">
+                            <div class="btn-group">
+                                <button type="button" 
+                                        class="btn btn-info btn-xs hgt29 btn-plus button-qty" 
+                                        id="qty_plus_NEW" name="PARTS">+</button>
+                            </div>
+                            <div class="btn-group">
+                                <input type="text" name="PARTS_QTY_NEW" id="PARTS_QTY_NEW" value="0" 
+                                        class="form-control input-sm input-qty" 
+                                        disabled placeholder="数量"/>
+                            </div>
+                            <div class="btn-group">
+                                <button type="button" 
+                                        class="btn btn-info btn-xs hgt29 btn-minus button-qty" 
+                                        id="qty_minus_NEW" name="PARTS">-</button>
+                            </div>
+                        </div>
+                </td>
+
+                <!--SUM-->
+                <td>
+                    <input type="text" id="PARTS_PRICE_NEW" name="PARTS_PRICE_NEW" value="" 
+                          class="form-control input-sm input-text" 
+                          placeholder="税抜価格" disabled >
+                </td>
+
+                <!--button-->
+                <td>
+                    <a class="btn btn-primary btn-sm btn-parts" id="PARTS_ADD_NEW" >ADD</a>
+                </td>
+            </tr>
+            </div>
+ 
+            <!--登録レコード の表示-->
+            ###TABLE_RECORDS_OPERATION###
+            </tbody>
+        </table>
+    <div>
+</div>
 <!--</html>-->
