テーブル調整

--- a/HTML/SIDE.HTML
+++ b/HTML/SIDE.HTML
@@ -34,7 +34,7 @@
                         <i class="glyphicon glyphicon-user"> 査定&nbsp</i><span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-    			              <a href="/APP/APPRAISAL/NEW/CUSTOMER?aciotn=INPUT">
+    			              <a href="/APP/APPRAISAL/NEW/CUSTOMER?action=INPUT">
                             <i class="glyphicon glyphicon-edit"> 新規登録</i>
                         </a>
                         <a href="/APP/APPRAISAL/LISTS?action=SHOW">
@@ -87,7 +87,6 @@
                         
                         <!--PARTS-->
                         <a href="/APP/PARTS_CATEGORY/LISTS?action=SHOW">
-
                             <i class="glyphicon glyphicon-wrench"> 部品カテゴリ</i>
                         </a>
                         <a href="/APP/PARTS_LIST/LISTS?action=SHOW">
@@ -101,8 +100,10 @@
                         <a href="/APP/SET_LIST/LISTS?action=SHOW">
                             <i class="glyphicon glyphicon-wrench"> セット一覧</i>
                         </a>
+                        <br>
+                        <br>
                         <a href="">
-                            <i class="glyphicon "></i>
+                            <i class="glyphicon "> </i>
                         </a>
                     </ul>
                 </div>
