--- a/APPLI/SET_DETAIL/LISTS/HTML/OPERATION/TABLE.HTML
+++ b/APPLI/SET_DETAIL/LISTS/HTML/OPERATION/TABLE.HTML
@@ -8,21 +8,20 @@
         <table class="table table-condensed tbl-x-scroll-min768">
             <thead>
                 <tr>
-                    <th class="col-xs-2 1col-sm-2">Category</th>
-                    <th class="col-xs-2 1col-sm-2">Operation</th>
-                    <th class="col-xs-2 1col-sm-2">Price</th>
-                    <th class="col-xs-1 1col-sm-2">Qty</th>
-                    <th class="col-xs-2 1col-sm-2">Sum</th>
-                    <th class="col-xs-2 1col-sm-2">Action</th>
+                    <th class="col-xs-2 ">Category</th>
+                    <th class="col-xs-2 ">Operation</th>
+                    <th class="col-xs-2 ">Price</th>
+                    <th class="col-xs-1 ">Qty</th>
+                    <th class="col-xs-2 ">Sum</th>
+                    <th class="col-xs-2 ">Action</th>
                 </tr>
             </thead>
             <tbody>
   
-            <!--新規作業パーツの表示-->
+            <!--新規作業の表示-->
             <div class="row">
             <tr id="row-new">
                 
-
                 <!--Category-->
                 <td>
                     <div class="form-group">
@@ -35,20 +34,19 @@
                                     />
                                         <b class="caret text-info" ></b>
                                     </button>
-                                    <ul class="dropdown-menu input-sm " role="menu" name="NEW">
+                                    <ul class="dropdown-menu" role="menu" name="NEW">
                                         ###OPERATION_CATEGORY###
                                     </ul>
                                 </div>
                                 <div class="btn-group">
-                                    <input type="text" name="CATEGORY_NM_NEW" id="CATEGORY_NM_NEW" value="" 
+                                    <input type="text" name="OPERATION_CATEGORY_NM_NEW" id="OPERATION_CATEGORY_NM_NEW" value="" 
                                         class="form-control input-sm input-text" 
                                         disabled 
-                                        placeholder="作業カテゴリ"
-                                    />
+                                        placeholder="作業カテゴリ" />
                                 </div>
-                                <input type="hidden" name="CATEGORY_NM_HID_NEW" id="CATEGORY_NM_HID_NEW" value="" 
+                                <input type="hidden" name="OPERATION_CATEGORY_NM_HID_NEW" id="OPERATION_CATEGORY_NM_HID_NEW" value="" 
                                       class="form-control" />
-                                <input type="hidden" name="CATEGORY_NO_HID_NEW" id="CATEGORY_NO_HID_NEW" value="" 
+                                <input type="hidden" name="OPERATION_CATEGORY_NO_HID_NEW" id="OPERATION_CATEGORY_NO_HID_NEW" value="" 
                                       class="form-control" />
                             </div> <!--btn-group-->
                         </div> <!--.dropdown-->
@@ -61,24 +59,23 @@
                         <div class="dropdown">
                             <div class="btn-group">
                                 <div class="btn-group">
-                                    <button type="button" 
-                                        class="btn btn-info dropdown-toggle btn-xs hgt29" 
-                                        id="new_set_categogy" data-toggle="dropdown" aria-expended="false" 
-                                    />
-                                        <b class="caret text-info" ></b>
-                                    </button>
-                                    <ul class="dropdown-menu" role="menu" name="NEW">
-                                        ###OPERATION_LIST###
-                                    </ul>
+                                    <div id="dropdown-operation-NEW" class="btn-group">
+                                        <button type="button" 
+                                            class="btn btn-info dropdown-toggle btn-xs hgt29" 
+                                            id="new_set_categogy" data-toggle="dropdown" aria-expended="false" />
+                                            <b class="caret text-info" ></b>
+                                        </button>
+                                        <ul id="dropdown-operation-list-NEW" class="dropdown-menu" role="menu" name="NEW">
+                                        </ul>
+                                    </div>
                                 </div>
                                 <div class="btn-group">
                                     <input type="text" name="OPERATION_NM_NEW" id="OPERATION_NM_NEW" value="" 
                                         class="form-control input-sm input-text" 
                                         disabled 
-                                        placeholder="作業"
-                                    />
+                                        placeholder="作業"/>
                                 </div>
-                                <input type="hidden" name="OPERATION_HID_NO_NEW" id="OPERATION_NO_HID_NEW" value="" class="form-control" />
+                                <input type="hidden" name="OPERATION_NO_HID_NEW" id="OPERATION_NO_HID_NEW" value="" class="form-control" />
                             </div> <!--btn-group-->
                         </div> <!--.dropdown-->
                     </div> <!--form-group-->
@@ -86,48 +83,48 @@
 
                 <!--PRICE-->
                 <td>
-                    <input type="text" id="PARTS_PRICE_NEW" name="PARTS_PRICE_NEW" value="" 
+                    <input type="text" id="OPERATION_PRICE_NEW" name="OPERATION_PRICE_NEW" value="" 
                             class="form-control input-sm input-text" 
-                            placeholder="税抜価格" disabled >
+                            placeholder="税抜価格" disabled />
                 </td>
 
                 <!--QTY-->
                 <td>
+                    <div class="btn-group">
                         <div class="btn-group">
-                            <div class="btn-group">
-                                <button type="button" 
-                                        class="btn btn-info btn-xs hgt29 btn-plus button-qty" 
-                                        id="qty_plus_NEW" name="PARTS">+</button>
-                            </div>
-                            <div class="btn-group">
-                                <input type="text" name="PARTS_QTY_NEW" id="PARTS_QTY_NEW" value="0" 
-                                        class="form-control input-sm input-qty" 
-                                        disabled placeholder="数量"/>
-                            </div>
-                            <div class="btn-group">
-                                <button type="button" 
-                                        class="btn btn-info btn-xs hgt29 btn-minus button-qty" 
-                                        id="qty_minus_NEW" name="PARTS">-</button>
-                            </div>
+                            <button type="button" 
+                                    class="btn btn-info btn-xs hgt29 btn-plus button-qty" 
+                                    id="qty_plus_NEW" name="OPERATION">+</button>
                         </div>
+                        <div class="btn-group">
+                            <input type="text" name="OPERATION_QTY_NEW" id="OPERATION_QTY_NEW" value="0" 
+                                    class="form-control input-sm input-qty" 
+                                    disabled placeholder="数量"/>
+                        </div>
+                        <div class="btn-group">
+                            <button type="button" 
+                                    class="btn btn-info btn-xs hgt29 btn-minus button-qty" 
+                                    id="qty_minus_NEW" name="OPERATION">-</button>
+                        </div>
+                    </div>
                 </td>
 
                 <!--SUM-->
                 <td>
-                    <input type="text" id="PARTS_PRICE_NEW" name="PARTS_PRICE_NEW" value="" 
+                    <input type="text" id="OPERATION_SUM_NEW" name="OPERATION_SUM_NEW" value="" 
                           class="form-control input-sm input-text" 
                           placeholder="税抜価格" disabled >
                 </td>
 
                 <!--button-->
                 <td>
-                    <a class="btn btn-primary btn-sm btn-parts" id="PARTS_ADD_NEW" >ADD</a>
+                    <a class="btn btn-primary btn-sm btn-parts add" name="OPERATION"id="OPERATION_ADD_NEW" >ADD</a>
                 </td>
             </tr>
             </div>
  
             <!--登録レコード の表示-->
-            ###TABLE_RECORDS_OPERATION###
+            ###OPERATION_TABLE_RECORDS###
             </tbody>
         </table>
     </div>
